# learn_stream_media

./: README.md
libs_demo/01_mjpg_streamer/: README.md  run.sh
libs_demo/02_FFmpeg/: Annexb_h264_parse.c  Makefile  README.md
libs_demo/02_FFmpeg/share/doc/ffmpeg/: community.html  developer.html  fate.html  ffmpeg-all.html  ffmpeg-bitstream-filters.html  ffmpeg-codecs.html  ffmpeg-devices.html  ffmpeg-filters.html  ffmpeg-formats.html  ffmpeg-protocols.html  ffmpeg-resampler.html  ffmpeg-scaler.html  ffmpeg-utils.html  ffmpeg.html  ffplay-all.html  ffplay.html  (+13 more)
libs_demo/03_V4L2/: README.md  md5sum.c  md5sum.h  v4l2_capture.c  v4l2_ext_controls.c  v4l2_xu_control.c  v4l2_xu_control_ota.c  v4l2_xu_control_tran_pcm.c
libs_demo/04_Nginx/: README.md  nginx.conf  run.sh
libs_demo/04_Nginx/learn_nginx_rtmp/conf/: nginx.conf
libs_demo/05_live555/: README.md  live.2024.03.08_alreadyChange.7z
libs_demo/06_audio/: wav_to_pcm.cpp
libs_demo/07_FFmpeg5.x/: .gitignore
libs_demo/07_FFmpeg5.x/FFmpeg_app/: CMakeLists.txt  README.md  bin.7z  build.sh  main.cpp
libs_demo/07_FFmpeg5.x/FFmpeg_app/share/man/man1/: ffmpeg-all.1  ffmpeg-bitstream-filters.1  ffmpeg-codecs.1  ffmpeg-devices.1  ffmpeg-filters.1  ffmpeg-formats.1  ffmpeg-protocols.1  ffmpeg-resampler.1  ffmpeg-scaler.1  ffmpeg-utils.1  ffmpeg.1  ffplay-all.1  ffprobe-all.1  ffprobe.1
libs_demo/07_FFmpeg5.x/FFmpeg_app/share/man/man3/: libavformat.3  libavutil.3  libswresample.3
libs_demo/07_FFmpeg5.x/FFmpeg_app/src/: 01_avcodec_version.cpp  02_stream_info.cpp  03_decode.cpp  04_demuxing_decoding.cpp
(+18 files in other folders)
